@@ -1,6 +1,6 @@
 package Whatpm::HTML;
 use strict;
-our $VERSION=do{my @r=(q$Revision: 1.119 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
+our $VERSION=do{my @r=(q$Revision: 1.120 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
 use Error qw(:try);
 
 ## ISSUE:
@@ -466,7 +466,7 @@ sub _get_next_token ($) {
       # Anything else
       my $token = {type => CHARACTER_TOKEN,
                    data => chr $self->{next_char},
-                   #line => $self->{line}, column => $self->{column},
+                   line => $self->{line}, column => $self->{column},
                   };
       ## Stay in the data state
       !!!next-input-character;
@@ -477,7 +477,7 @@ sub _get_next_token ($) {
     } elsif ($self->{state} == ENTITY_DATA_STATE) {
       ## (cannot happen in CDATA state)
 
-      #my ($l, $c) = ($self->{line_prev}, $self->{column_prev});
+      my ($l, $c) = ($self->{line_prev}, $self->{column_prev});
       
       my $token = $self->_tokenize_attempt_to_consume_an_entity (0, -1);
 
@@ -487,7 +487,7 @@ sub _get_next_token ($) {
       unless (defined $token) {
         !!!cp (13);
         !!!emit ({type => CHARACTER_TOKEN, data => '&',
-                  #line => $l, column => $c,
+                  line => $l, column => $c,
                  });
       } else {
         !!!cp (14);
@@ -508,8 +508,8 @@ sub _get_next_token ($) {
           $self->{state} = DATA_STATE;
 
           !!!emit ({type => CHARACTER_TOKEN, data => '<',
-                    #line => $self->{line_prev},
-                    #column => $self->{column_prev},
+                    line => $self->{line_prev},
+                    column => $self->{column_prev},
                    });
 
           redo A;
@@ -555,8 +555,8 @@ sub _get_next_token ($) {
           !!!next-input-character;
 
           !!!emit ({type => CHARACTER_TOKEN, data => '<>',
-                    #line => $self->{line_prev},
-                    #column => $self->{column_prev},
+                    line => $self->{line_prev},
+                    column => $self->{column_prev},
                    });
 
           redo A;
@@ -567,8 +567,8 @@ sub _get_next_token ($) {
                           column => $self->{column_prev});
           $self->{state} = BOGUS_COMMENT_STATE;
           $self->{current_token} = {type => COMMENT_TOKEN, data => '',
-                                    #line => $self->{line_prev},
-                                    #column => $self->{column_prev},
+                                    line => $self->{line_prev},
+                                    column => $self->{column_prev},
                                    };
           ## $self->{next_char} is intentionally left as is
           redo A;
@@ -579,8 +579,8 @@ sub _get_next_token ($) {
           ## reconsume
 
           !!!emit ({type => CHARACTER_TOKEN, data => '<',
-                    #line => $self->{line_prev},
-                    #column => $self->{column_prev},
+                    line => $self->{line_prev},
+                    column => $self->{column_prev},
                    });
 
           redo A;
@@ -610,7 +610,7 @@ sub _get_next_token ($) {
               $self->{state} = DATA_STATE;
 
               !!!emit ({type => CHARACTER_TOKEN, data => '</',
-                        #line => $l, column => $c,
+                        line => $l, column => $c,
                        });
   
               redo A;
@@ -631,7 +631,7 @@ sub _get_next_token ($) {
             !!!back-next-input-character (@next_char);
             $self->{state} = DATA_STATE;
             !!!emit ({type => CHARACTER_TOKEN, data => '</',
-                      #line => $l, column => $c,
+                      line => $l, column => $c,
                      });
             redo A;
           } else {
@@ -646,7 +646,7 @@ sub _get_next_token ($) {
           # next-input-character is already done
           $self->{state} = DATA_STATE;
           !!!emit ({type => CHARACTER_TOKEN, data => '</',
-                    #line => $l, column => $c,
+                    line => $l, column => $c,
                    });
           redo A;
         }
@@ -686,7 +686,7 @@ sub _get_next_token ($) {
         # reconsume
 
         !!!emit ({type => CHARACTER_TOKEN, data => '</',
-                  #line => $l, column => $c,
+                  line => $l, column => $c,
                  });
 
         redo A;
@@ -695,8 +695,8 @@ sub _get_next_token ($) {
         !!!parse-error (type => 'bogus end tag');
         $self->{state} = BOGUS_COMMENT_STATE;
         $self->{current_token} = {type => COMMENT_TOKEN, data => '',
-                                  #line => $self->{line_prev}, # "<" of "</"
-                                  #column => $self->{column_prev} - 1,
+                                  line => $self->{line_prev}, # "<" of "</"
+                                  column => $self->{column_prev} - 1,
                                  };
         ## $self->{next_char} is intentionally left as is
         redo A;
@@ -889,7 +889,7 @@ sub _get_next_token ($) {
         if (exists $self->{current_token}->{attributes} # start tag or end tag
             ->{$self->{current_attribute}->{name}}) { # MUST
           !!!cp (57);
-          !!!parse-error (type => 'duplicate attribute:'.$self->{current_attribute}->{name});
+          !!!parse-error (type => 'duplicate attribute:'.$self->{current_attribute}->{name}, line => $self->{current_attribute}->{line}, column => $self->{current_attribute}->{column});
           ## Discard $self->{current_attribute} # MUST
         } else {
           !!!cp (58);
@@ -1444,7 +1444,7 @@ sub _get_next_token ($) {
     } elsif ($self->{state} == MARKUP_DECLARATION_OPEN_STATE) {
       ## (only happen if PCDATA state)
 
-      #my ($l, $c) = ($self->{line_prev}, $self->{column_prev} - 1);
+      my ($l, $c) = ($self->{line_prev}, $self->{column_prev} - 1);
 
       my @next_char;
       push @next_char, $self->{next_char};
@@ -1455,7 +1455,7 @@ sub _get_next_token ($) {
         if ($self->{next_char} == 0x002D) { # -
           !!!cp (127);
           $self->{current_token} = {type => COMMENT_TOKEN, data => '',
-                                    #line => $l, column => $c,
+                                    line => $l, column => $c,
                                    };
           $self->{state} = COMMENT_START_STATE;
           !!!next-input-character;
@@ -1494,7 +1494,7 @@ sub _get_next_token ($) {
                     $self->{state} = DOCTYPE_STATE;
                     $self->{current_token} = {type => DOCTYPE_TOKEN,
                                               quirks => 1,
-                                              #line => $l, column => $c,
+                                              line => $l, column => $c,
                                              };
                     !!!next-input-character;
                     redo A;
@@ -1525,7 +1525,7 @@ sub _get_next_token ($) {
       !!!back-next-input-character (@next_char);
       $self->{state} = BOGUS_COMMENT_STATE;
       $self->{current_token} = {type => COMMENT_TOKEN, data => '',
-                                #line => $l, column => $c,
+                                line => $l, column => $c,
                                };
       redo A;
       
@@ -2325,7 +2325,7 @@ sub _tokenize_attempt_to_consume_an_entity ($$$) {
 
         return {type => CHARACTER_TOKEN, data => chr $code,
                 has_reference => 1,
-                #line => $l, column => $c,
+                line => $l, column => $c,
                };
       } # X
     } elsif (0x0030 <= $self->{next_char} and
@@ -2369,7 +2369,7 @@ sub _tokenize_attempt_to_consume_an_entity ($$$) {
       }
       
       return {type => CHARACTER_TOKEN, data => chr $code, has_reference => 1,
-              #line => $l, column => $c,
+              line => $l, column => $c,
              };
     } else {
       !!!cp (1019);
@@ -2424,19 +2424,19 @@ sub _tokenize_attempt_to_consume_an_entity ($$$) {
     if ($match > 0) {
       !!!cp (1023);
       return {type => CHARACTER_TOKEN, data => $value, has_reference => 1,
-              #line => $l, column => $c,
+              line => $l, column => $c,
              };
     } elsif ($match < 0) {
       !!!parse-error (type => 'no refc', line => $l, column => $c);
       if ($in_attr and $match < -1) {
         !!!cp (1024);
         return {type => CHARACTER_TOKEN, data => '&'.$entity_name,
-                #line => $l, column => $c,
+                line => $l, column => $c,
                };
       } else {
         !!!cp (1025);
         return {type => CHARACTER_TOKEN, data => $value, has_reference => 1,
-                #line => $l, column => $c,
+                line => $l, column => $c,
                };
       }
     } else {
@@ -2444,7 +2444,7 @@ sub _tokenize_attempt_to_consume_an_entity ($$$) {
       !!!parse-error (type => 'bare ero', line => $l, column => $c);
       ## NOTE: "No characters are consumed" in the spec.
       return {type => CHARACTER_TOKEN, data => '&'.$value,
-              #line => $l, column => $c,
+              line => $l, column => $c,
              };
     }
   } else {
@@ -6613,4 +6613,4 @@ package Whatpm::HTML::RestartParser;
 push our @ISA, 'Error';
 
 1;
-# $Date: 2008/03/20 03:37:18 $
+# $Date: 2008/03/20 03:57:00 $
