@@ -1,7 +1,7 @@
 1..472
 # Running under perl version 5.008007 for linux
-# Current time local: Thu Mar 20 12:25:02 2008
-# Current time GMT:   Thu Mar 20 03:25:02 2008
+# Current time local: Thu Mar 20 12:51:56 2008
+# Current time GMT:   Thu Mar 20 03:51:56 2008
 # Using Test.pm version 1.25
 # t/tokenizer/test1.test
 ok 1
