@@ -1,7 +1,7 @@
 1..980
 # Running under perl version 5.008007 for linux
-# Current time local: Thu Mar 20 12:25:14 2008
-# Current time GMT:   Thu Mar 20 03:25:14 2008
+# Current time local: Thu Mar 20 12:52:24 2008
+# Current time GMT:   Thu Mar 20 03:52:24 2008
 # Using Test.pm version 1.25
 # t/tokenizer-test-2.dat
 ok 1
